syntax = "proto3";

package pb;

import "post_like/post_like.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message GetPostLikeRequest {
    string post_id = 1;
}

message GetPostLikeResponse {
    PostLike post_like = 1;
}

